--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    repositories {
+        // 阿里云云效仓库：https://maven.aliyun.com/mvn/guide
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        // 华为开源镜像：https://mirrors.huaweicloud.com/
+        maven { url 'https://repo.huaweicloud.com/repository/maven/' }
+        // JitPack 远程仓库：https://jitpack.io
+        maven { url 'https://jitpack.io' }
+        mavenCentral()
+        google()
+        // noinspection JcenterRepositoryObsolete
+        jcenter()
+    }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
         classpath 'com.android.tools:r8:3.0.73'
@@ -13,16 +26,17 @@ plugins {
 }
 allprojects {
     repositories {
-        google()
-        mavenCentral()
-        maven { url 'https://maven.aliyun.com/repository/public/' }
+        // 阿里云云效仓库：https://maven.aliyun.com/mvn/guide
+        maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/google' }
-        mavenLocal()
+        // 华为开源镜像：https://mirrors.huaweicloud.com/
+        maven { url 'https://repo.huaweicloud.com/repository/maven/' }
+        // JitPack 远程仓库：https://jitpack.io
+        maven { url 'https://jitpack.io' }
         mavenCentral()
-        maven { url "https://jitpack.io" }
-        maven { url 'https://repo1.maven.org/maven2/' }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
+        google()
+        // noinspection JcenterRepositoryObsolete
+        jcenter()
     }
 }
 task clean(type: Delete) {
