--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,7 @@
 plugins {
-    id 'com.android.library'
+    id 'com.android.application'
     id 'kotlin-android'
-    id 'maven-publish'
 }
-
-group='com.github.1145906886'
 
 android {
     compileSdk 32
@@ -35,22 +32,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation "androidx.camera:camera-core:1.2.0-alpha04"
-    implementation "androidx.camera:camera-camera2:1.2.0-alpha04"
-    implementation "androidx.camera:camera-view:1.2.0-alpha04"
-    // If you want to additionally use the CameraX Lifecycle library
-    implementation "androidx.camera:camera-lifecycle:1.2.0-alpha04"
-}
-
-afterEvaluate {
-    publishing {
-        publications {
-            // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                groupId = 'com.github.1145906886'
-                artifactId = 'SurfaceCamera'
-                version = '1.0.3'
-            }
-        }
-    }
+    implementation project(':mylibrary')
 }
