--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".IDCameraActivity"
+            android:name="cn.xarequest.mylibrary.IDCameraActivity"
             android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
