--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
 pluginManagement {
+    plugins{
+        id "com.github.dcendents.android-maven" version "2.1"
+    }
     repositories {
         gradlePluginPortal()
         google()
